<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ImageView
        android:id="@+id/view_header"
        android:background="@drawable/header3_portait"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/text_title_openthos"
        android:textSize="@dimen/title_text_size"
        android:textColor="#ffaaaaaa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_openthos_id"
        android:layout_centerInParent="true"
        android:layout_below="@+id/view_header"/>
    <TextView
        android:id="@+id/controls_space"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/text_title_openthos"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearlayout_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10.0dip"
        android:layout_below="@+id/controls_space">
        <TextView
            android:textSize="@dimen/button_text_size"
            android:textColor="#ffaaaaaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openthos_id_name" />
        <EditText
            android:textSize="22.0sp"
            android:id="@+id/edittext_openthos_id"
            android:background="@drawable/spinner_popup_bg"
            android:layout_width="270.0dip"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionDone" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/linearlayout_one"
        >
        <TextView
            android:textSize="@dimen/button_text_size"
            android:textColor="#ffaaaaaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/openthos_id_password" />
        <EditText
            android:textSize="22.0sp"
            android:id="@+id/edittext_openthos_password"
            android:background="@drawable/spinner_popup_bg"
            android:layout_width="270.0dip"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30.0dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/text_register"
            android:textSize="@dimen/button_text_size"
            android:textColor="#ffaaaaaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30.0dip"
            android:text="@string/str_register" />
        <Button
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/button_text_color"
            android:gravity="center"
            android:id="@+id/button_prev"
            android:background="@drawable/selector_button_bg1"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginRight="120.0dip"
            android:text="@string/str_prev" />
        <Button
            android:textSize="@dimen/button_text_size"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:id="@+id/button_verify"
            android:background="@drawable/selector_button_bg2"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/str_verify" />
        <TextView
            android:id="@+id/text_skip"
            android:textSize="@dimen/button_text_size"
            android:textColor="#ffaaaaaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30.0dip"
            android:text="@string/str_skip" />
    </LinearLayout>
</RelativeLayout>
